--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "elearning-frontend",
+  "name": "elearning",
   "version": "1.0.0",
   "main": "expo/AppEntry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -18,12 +18,16 @@
     "@supabase/supabase-js": "^2.90.1",
     "expo": "^54.0.0",
     "expo-asset": "~12.0.12",
+    "expo-checkbox": "~5.0.8",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
+    "expo-linking": "~8.0.11",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "4.1.1",
     "react-native-safe-area-context": "~5.6.0",
